--- a/app/views/layouts/user_layout.html.erb
+++ b/app/views/layouts/user_layout.html.erb
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <title><%=h @title ? @title : h(@user.nickname)%></title>
   <%= javascript_include_tag "jquery-1.2.3.min.js" %>
   <%= javascript_include_tag "jquery.dimensions.js" %>
