--- a/app/views/match_invitations/_properties_list.html.erb
+++ b/app/views/match_invitations/_properties_list.html.erb
@@ -2,14 +2,14 @@
   <%if need_reply%>
     <tr>
       <td style="width:60px">&nbsp;</td>
-      <td>对方提出的新建议</td>
-      <td>我队上次的建议</td>
+      <td>对方提出的新方案</td>
+      <td>我队上次的方案</td>
     </tr>
   <%else%>
     <tr>
       <td style="width:60px">&nbsp;</td>
-      <td>我队提出的新建议</td>
-      <td>对方上次的建议</td>
+      <td>我队提出的新方案</td>
+      <td>对方上次的方案</td>
     </tr>
   <%end%>
   <%= macth_invitation_comparison_tr(mi, '时间', :start_time){ |t| 
