--- a/app/views/sidebar_menus/_team_view_formation.html.erb
+++ b/app/views/sidebar_menus/_team_view_formation.html.erb
@@ -9,7 +9,7 @@
       > <%= link_to '选拔队员', player_management_team_joins_path(:team_id => @team) %>
     </li>
     <li <%= selected_class_sidebar_menu_item(:action=>'formation_management')%>>
-      > <%= link_to '安排阵型', formation_management_team_joins_path(:team_id => @team) %>
+      > <%= link_to '编辑阵型', formation_management_team_joins_path(:team_id => @team) %>
     </li>
   <%end%>
   <li class='seperate'>
