--- a/app/views/calendar/_calendar.html.erb
+++ b/app/views/calendar/_calendar.html.erb
@@ -5,7 +5,7 @@
   <span><%= start_date.strftime("%Y-%m")%></span>
   <%= month_calendar_link image_tag('next.jpg'), start_date.next_month, @user || @team%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
 <div>
   <div class="weekDayDiv"><span class="weekDaySpan">日</span></div>
   <div class="weekDayDiv"><span class="weekDaySpan">一</span></div>
