--- a/app/views/football_grounds/edit.html.erb
+++ b/app/views/football_grounds/edit.html.erb
@@ -21,4 +21,4 @@
   <%= (button_to '删除', @football_ground, :confirm => '确定删除？', :method => :delete) if @football_ground.status == 0 %>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
