--- a/app/views/football_grounds/show.html.erb
+++ b/app/views/football_grounds/show.html.erb
@@ -63,4 +63,4 @@
     <%= render :partial => 'shared/activities', :object => @activities, :locals=>{:start_date=> Time.now, :end_date=> Time.now.tomorrow}%>
   </div>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
