--- a/app/views/friend_invitations/index.html.erb
+++ b/app/views/friend_invitations/index.html.erb
@@ -33,4 +33,4 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/user_view_friend'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
