--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,5 +8,5 @@
   <a href="#">隐私声明</a>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="#">帮助</a>
   </span>
-  <div class="clearBoth"></div>
+  <div class="cb"></div>
 </div>
