--- a/app/views/layouts/unlogin_layout.html.erb
+++ b/app/views/layouts/unlogin_layout.html.erb
@@ -17,6 +17,7 @@
 <%= render(:partial => 'layouts/qmd')%>
 <div id="main_content">
   <div id="header">
+    <a id="site_link" href="/"></a>
     <%= image_tag "footballboy3.jpg", :title=>"WeFootball", :id=>"header_icon" %>
 
     <%= render(:partial => 'layouts/header_setting')%>
