--- a/app/views/matches/_team_in_match.erb
+++ b/app/views/matches/_team_in_match.erb
@@ -28,9 +28,9 @@
         :style=>"left:#{pos[:left]}px;top:#{pos[:top]}px;",
         :title=>ut.user.nickname), user_view_path(ut.user), :class=>"resize_small_icon" %>
     <%end%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
-  <div class="clearBoth"></div>
+  <div class="cb"></div>
 </div>
 
 <div class="sect">   
