--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -22,7 +22,7 @@
           <%= links_with_sticks links%>
         <%end%>
       </div>
-      <div class="clearBoth"></div>
+      <div class="cb"></div>
     </div>
   </div>
 </div>
@@ -37,9 +37,9 @@
         <%= user_icon(@players)%>
         <%= link_to "> 更多",players_play_path(@play.id), :class=>"more" %>
     <%end%>  
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
 
