--- a/app/views/sidebar_menus/_team_view_formation.html.erb
+++ b/app/views/sidebar_menus/_team_view_formation.html.erb
@@ -17,5 +17,5 @@
   <li>
     > <%= link_to '返回球队首页', team_view_path(@team) %>
   </li>
-  <div class="clearBoth"></div>
+  <div class="cb"></div>
 </ul>
