--- a/app/views/team_join_requests/index_user.html.erb
+++ b/app/views/team_join_requests/index_user.html.erb
@@ -33,4 +33,4 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/team_view_team_and_management'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
