--- a/app/views/team_joins/admin_management.html.erb
+++ b/app/views/team_joins/admin_management.html.erb
@@ -19,7 +19,7 @@
         </div>
       </div>
     <%end%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 
   <div class="sect">
@@ -35,8 +35,8 @@
         </div>
       </div>
     <%end%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
