--- a/app/views/team_joins/index_user.html.erb
+++ b/app/views/team_joins/index_user.html.erb
@@ -7,20 +7,20 @@
   <div class="sect">
     <h2>管理员</h2>
     <%= user_icon(@admin)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 
   <div class="sect">
     <h2>队员</h2>
     <%= user_icon(@players)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 
   <div class="sect">
     <h2>其他成员</h2>
     <%= user_icon(@others)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
