--- a/app/views/teams/search.html.erb
+++ b/app/views/teams/search.html.erb
@@ -19,8 +19,8 @@
   <div class="sect">
     <h2><%=h @title%></h2>
     <%= team_icon(@teams)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
