--- a/app/views/user_mailer/invite_notification.html.erb
+++ b/app/views/user_mailer/invite_notification.html.erb
@@ -1,8 +1,8 @@
-<%=h @host.nickname%>邀请您使用WeFootball！
+<%=h @host.nickname%>邀请你使用WeFootball！
 
 <%if !@message.blank?%>
-  这里是<%=@host.nickname%>给您的留言:<%=h @message%>
+  这里是<%=@host.nickname%>给你的留言:<%=h @message%>
 <%end%>
 <%=h @host.nickname%>的WeFootball的页面为: <%=@host_url%>
 
-请访问<%=@signup_url%>注册您的WeFootball帐号
+请访问<%=@signup_url%>注册你的WeFootball帐号
