--- a/app/views/user_mailer/reset_password.html.erb
+++ b/app/views/user_mailer/reset_password.html.erb
@@ -1,8 +1,8 @@
-<%= @user.login %>, 您的密码已经修改
+<%= @user.login %>, 你的密码已经修改
 
-现在您的帐户为: 
+现在你的帐户为: 
 
   用户名: <%= @user.login %>
   密码:  <%= @user.password %>
 
-您可以访问<%= @url %>进行登录
+你可以访问<%= @url %>进行登录
