--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -25,7 +25,7 @@
         <div class="input"><%= check_box_tag "teams_id[]", team.id%></div>
       </div>
     <%end%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   <%end%>
 
       
@@ -38,4 +38,4 @@
   <%=render :partial=>'sidebar_menus/user_view_friend'%>
 </div>
   
-<div class="clearBoth"></div>
+<div class="cb"></div>
