--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -21,8 +21,8 @@
   <div class="sect">
     <h2><%=h @title%></h2>
     <%= user_icon(@users)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
