--- a/app/views/friend_relations/index.html.erb
+++ b/app/views/friend_relations/index.html.erb
@@ -7,7 +7,7 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/user_view_friend'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
 
 
 
