--- a/app/views/match_joins/edit.html.erb
+++ b/app/views/match_joins/edit.html.erb
@@ -17,7 +17,7 @@
     > <%= link_to '返回比赛详情', match_path(@match)%>
     </li>
   </ul>
-  <div class="clearBoth"></div>
+  <div class="cb"></div>
   <div id="scroll_field">
     <div style="margin-bottom:5px;"><%= submit_tag "保存修改", :onclick => 'formation.submit();'%></div>
     <div id="field_div"></div>
@@ -33,7 +33,7 @@
       <% category.each_with_index do |item, i|%>
         <span class="tab_link" style="<%= i==0 ? "margin-left:10px" : ""%>"><%=item[0]%></span>
       <%end%>
-      <div class="clearBoth"></div>
+      <div class="cb"></div>
       <% category.each do |item|%>
         <div class="tab">
           <%item[1].each do |pos|%>
@@ -45,7 +45,7 @@
                   <span><%=link_to h(user.nickname), user_view_path(user.id)%></span>
                 </div>
               <%end%>
-              <div class="clearBoth"></div>
+              <div class="cb"></div>
             <%end%>
           <%end%>
         </div>
@@ -86,4 +86,4 @@
   <%end%>
 <%end%>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
