--- a/app/views/plays/players.html.erb
+++ b/app/views/plays/players.html.erb
@@ -7,4 +7,4 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/user_view_players'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
