--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   </div>
 
 <%if @can_reply%>
-  <div class="sect clearBoth">
+  <div class="sect cb">
     <h2>回复</h2>
     <%= error_messages_for :reply %>
     <br/>
@@ -30,4 +30,4 @@
   <%= render :partial=>'posts/narrow_post_list', :object=>@related_posts%>
   </div>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
