--- a/app/views/shared/_activities.html.erb
+++ b/app/views/shared/_activities.html.erb
@@ -10,7 +10,7 @@
               <%= render :partial => 'shared/activity', :object => act%>
           <%end%>
         </div>
-        <div class="clearBoth"></div>
+        <div class="cb"></div>
     <%end%>
   </div>
   <% date = date.tomorrow %>
