--- a/app/views/team_join_invitations/index_team.html.erb
+++ b/app/views/team_join_invitations/index_team.html.erb
@@ -33,4 +33,4 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/user_view_team'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
