--- a/app/views/team_join_invitations/new_by_user_id.html.erb
+++ b/app/views/team_join_invitations/new_by_user_id.html.erb
@@ -13,7 +13,7 @@
         <div class="input"><%= check_box_tag "teams_id[]", team.id%></div>
       </div>
     <%end%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
 
     <span>留言 <span class="optional">(可选)</span></span><br />
     <%= f.text_area :message, :cols => 40, :rows => 3 %><br />
@@ -33,4 +33,4 @@
   </ul>
 </div>
 
-<div class="clearBoth"></div>
+<div class="cb"></div>
