--- a/app/views/team_join_requests/index_team.html.erb
+++ b/app/views/team_join_requests/index_team.html.erb
@@ -32,4 +32,4 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/user_view_team'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
