--- a/app/views/team_joins/index_team.html.erb
+++ b/app/views/team_joins/index_team.html.erb
@@ -3,14 +3,14 @@
   <div class="sect">
     <h2>管理的球队</h2>
     <%= team_icon(@admin_teams)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
   <%end%>
 
   <div class="sect">
     <h2>参加的球队</h2>
     <%= team_icon(@other_teams)%>
-    <div class="clearBoth"></div>
+    <div class="cb"></div>
   </div>
 </div>
 
@@ -18,4 +18,4 @@
   <h2></h2>
   <%=render :partial=>'sidebar_menus/user_view_team'%>
 </div>
-<div class="clearBoth"></div>
+<div class="cb"></div>
